Moved source code into src/ directory

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "MakinaCorpus\\DrupalTooling\\": "."
+            "MakinaCorpus\\DrupalTooling\\": "src"
         },
         "exclude-from-classmap": [
             "/src/Tests/"
