--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,8 @@
         "symfony/translation": "~2.8|~3.0",
         "symfony/yaml" : "~2.8|~3.0"
     },
+    "suggest" : {
+        "makinacorpus/drupal-sf-dic" : "For embeding the Symfony kernel into your Drupal 7 site"
+    },
     "minimum-stability" : "dev"
 }
