--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     },
     "suggest" : {
         "makinacorpus/drupal-sf-dic" : "For embeding the Symfony kernel into your Drupal 7 site"
+        "symfony/finder": "For potential bundles to be able to register commands",
     },
     "minimum-stability" : "dev"
 }
